Maintained constant admin password; adjusted password handling.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <canvas id="canvas" width="400" height="400"></canvas>
 
-  <input type="color" id="colorPicker">
+  <input type="color" id="colorPicker" value="#000000">
   <input type="password" id="passwordInput" placeholder="Enter password">
   <button id="submitPassword">Submit</button>
   <button id="clearCanvasButton" style="display: none;">Clear Canvas</button>
@@ -37,7 +37,8 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
     import { getDatabase, ref, set, onValue, remove } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-database.js";
-    import CryptoJS from "https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js";
+    // Use the default export of CryptoJS as a named import
+    const CryptoJS = window.CryptoJS;
 
     const firebaseConfig = {
       apiKey: "AIzaSyCjcSLUJsjQWmITFt3gQCul9BcNs1ABTpA",
@@ -206,33 +207,30 @@
 
     // Clear canvas button
     document.getElementById('clearCanvasButton').addEventListener('click', () => {
-      const confirmed = confirm('Are you sure you want to clear the canvas?');
+      const confirmed = confirm('Are you sure you want to clear the canvas? This action cannot be undone!');
       if (confirmed) {
-        ctx.clearRect(0, 0, canvasWidth, canvasHeight);
-        const pixelsRef = ref(database, 'pixels/');
-        remove(pixelsRef).then(() => {
-          console.log('Canvas cleared in database');
-        }).catch((error) => {
-          console.error('Error clearing canvas:', error);
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        remove(ref(database, 'pixels'));
+        alert('Canvas cleared!');
+      }
+    });
+
+    // Load existing pixels from the database
+    onValue(ref(database, 'pixels'), (snapshot) => {
+      const pixels = snapshot.val();
+      if (pixels) {
+        Object.keys(pixels).forEach(key => {
+          const [x, y] = key.split(',').map(Number);
+          ctx.fillStyle = pixels[key].color;
+          ctx.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
         });
       }
     });
 
-    // Retrieve pixels from Firebase
-    onValue(ref(database, 'pixels/'), (snapshot) => {
-      ctx.clearRect(0, 0, canvasWidth, canvasHeight); // Clear canvas before drawing
-      snapshot.forEach(childSnapshot => {
-        const { color } = childSnapshot.val();
-        const [x, y] = childSnapshot.key.split(',').map(Number);
-        ctx.fillStyle = color;
-        ctx.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
-      });
-    });
+    // Display the weekly user password
+    const weeklyUserPassword = setWeeklyUserPassword();
+    document.getElementById('display-password').textContent = weeklyUserPassword;
 
-    // Set the weekly user password for the first time
-    const userPassword = setWeeklyUserPassword();
-    document.getElementById('display-password').textContent = userPassword; // Display user password for admins
-    document.getElementById('user-password').style.display = 'block'; // Show user password section
   </script>
 </body>
 </html>
