--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     const cooldownTimer = document.getElementById('cooldown-timer');
-    const adminPassword = "Itsameamario1"; // Admin password (constant)
+    const adminPassword = "The0verseer"; // Admin password (constant)
     const pixelSize = 10; // Pixel size, adjustable
     const cooldownDuration = 5 * 60 * 1000; // 5 minutes cooldown
     let cooldownEndTime = null;
