--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     User Password: <span id="display-password"></span>
   </div>
 
+  <div id="firebase-version" style="margin-top: 20px;">
+    Firebase Version: <span id="firebase-version-text"></span>
+  </div>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
     import { getDatabase, ref, set, onValue, remove } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-database.js";
@@ -52,6 +56,10 @@
 
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
+
+    // Display Firebase version
+    const firebaseVersion = "9.21.0"; // Change this to match your version
+    document.getElementById('firebase-version-text').textContent = firebaseVersion;
 
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
@@ -194,44 +202,38 @@
         console.log('Weekly User Password (for Admin):', userPassword); // Log the decrypted password
         
         // Display the user password on the webpage
-        document.getElementById('display-password').textContent = userPassword; // Show user password
-        document.getElementById('user-password').style.display = 'block'; // Show the div containing the user password
-
+        document.getElementById('display-password').textContent = userPassword;
+        document.getElementById('user-password').style.display = 'block';
+      } else if (passwordInput === setWeeklyUserPassword()) {
+        isUserAuthenticated = true;
+        alert('You can now place a pixel!');
       } else {
-        const userPassword = setWeeklyUserPassword();
-        if (passwordInput === userPassword) {
-          alert('User access granted. You can now place pixels.');
-          isUserAuthenticated = true;
-
-          // Hide the user password display for regular users
-          document.getElementById('user-password').style.display = 'none'; // Hide user password
-        } else {
-          alert('Incorrect password. Please try again.');
-        }
+        alert('Incorrect password. Please try again.');
       }
     });
 
-    // Clear canvas button functionality
+    // Clear Canvas button functionality
     document.getElementById('clearCanvasButton').addEventListener('click', () => {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      remove(ref(database, 'pixels')).then(() => {
-        console.log('Canvas cleared and database updated');
+      const pixelsRef = ref(database, 'pixels');
+      remove(pixelsRef).then(() => {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        alert('Canvas cleared successfully!');
       }).catch((error) => {
         console.error('Error clearing canvas:', error);
       });
     });
-    
-    // Load existing pixels from Firebase on page load
+
+    // Listen for pixel updates from Firebase
     onValue(ref(database, 'pixels'), (snapshot) => {
-      const pixels = snapshot.val();
-      if (pixels) {
-        for (const key in pixels) {
-          const [x, y] = key.split(',').map(Number);
-          ctx.fillStyle = pixels[key].color;
-          ctx.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
-        }
-      }
+      ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas before rendering
+      snapshot.forEach((childSnapshot) => {
+        const { color } = childSnapshot.val();
+        const [x, y] = childSnapshot.key.split(',').map(Number);
+        ctx.fillStyle = color;
+        ctx.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
+      });
     });
+
   </script>
 </body>
 </html>
