--- a/index.html
+++ b/index.html
@@ -134,18 +134,6 @@
       updateCooldownTimer();
     });
 
-    // Fetch predetermined passwords from GitHub
-    async function fetchPasswords() {
-      try {
-        const response = await fetch('https://github.com/WarBird115/PixelWar/blob/main/.github/workflows/update-password.yml');
-        const data = await response.json();
-        return data.passwords; // Assuming the JSON structure has a key "passwords" with an array of passwords
-      } catch (error) {
-        console.error('Error fetching passwords:', error);
-        return [];
-      }
-    }
-
     // Password submission for admin access
     document.getElementById('submitPassword').addEventListener('click', async () => {
       const passwordInput = document.getElementById('passwordInput').value;
@@ -155,26 +143,17 @@
         alert('Admin access granted. You can now clear the canvas.');
         isUserAuthenticated = true;
 
-        // Fetch and display the random password from GitHub
-        const passwords = await fetchPasswords();
-        if (passwords.length > 0) {
-          const randomIndex = Math.floor(Math.random() * passwords.length);
-          const selectedPassword = passwords[randomIndex];
+        // Display the admin password
+        document.getElementById('adminPasswordDisplay').style.display = 'block';
+        document.getElementById('adminPasswordText').textContent = adminPassword;
 
-          // Display the selected password for admin
-          document.getElementById('adminPasswordDisplay').style.display = 'block';
-          document.getElementById('adminPasswordText').textContent = adminPassword;
+        // Fetch the regular user password (assumed available)
+        const selectedPassword = "12345"; // Example for regular user password
+        document.getElementById('regularUserPasswordDisplay').style.display = 'block';
+        document.getElementById('regularUserPasswordText').textContent = selectedPassword;
 
-          // Display the regular user password
-          document.getElementById('regularUserPasswordDisplay').style.display = 'block';
-          document.getElementById('regularUserPasswordText').textContent = selectedPassword; // Set the selected password
-          console.log(`Regular User Password: ${selectedPassword}`); // Log it in the console
-        } else {
-          alert('No passwords available.');
-        }
       } else {
         alert('Incorrect password. Please try again.');
-        // Hide the password displays if incorrect password entered
         document.getElementById('adminPasswordDisplay').style.display = 'none';
         document.getElementById('regularUserPasswordDisplay').style.display = 'none';
       }
